@@ -1,0 +1,3 @@
+PHP is a programming language designed to be embedded into web pages.
+The SOAP extension can be used to write SOAP Servers and Clients.
+It supports subsets of SOAP 1.1, SOAP 1.2 and WSDL 1.1 specifications.
